Update subtitles in "The Social Network" scenes in "The Computer - the ultimate asshole?" article

--- a/src/data/blog/2026/01/the-computer-the-ultimate-asshole.mdx
+++ b/src/data/blog/2026/01/the-computer-the-ultimate-asshole.mdx
@@ -12,9 +12,10 @@ tags:
   - coding
   - software development
 description:
-  Coding, Bugs, and the Psychology of Developers
+  Coding, Bugs, and the Psychology of Software Developers
 ogImage: "@/assets/images/blog/the-computer-the-ultimate-asshole/hal-9000-i-m-sorry-dave.jpg"
 ---
+
 import { Image } from 'astro:assets';
 import bookCover from '@/assets/images/blog/the-computer-the-ultimate-asshole/coders-book-cover-reduced.jpg';
 import harryAndSallyYesYesYes from '@/assets/images/blog/the-computer-the-ultimate-asshole/when-harry-met-sally-restaurant-scene-yes-yes-yes.jpg';
@@ -27,7 +28,8 @@ import understandingComicsPanel1 from '@/assets/images/blog/the-computer-the-ult
 import understandingComicsPanel2 from '@/assets/images/blog/the-computer-the-ultimate-asshole/understanding-comics-2.jpg';
 import understandingComicsPanel3 from '@/assets/images/blog/the-computer-the-ultimate-asshole/understanding-comics-3.jpg';
 import understandingComicsPanel4 from '@/assets/images/blog/the-computer-the-ultimate-asshole/understanding-comics-4.jpg';
-import theSocialNetwork1 from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-1.jpg';
+import theSocialNetwork1a from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-1a.jpg';
+import theSocialNetwork1b from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-1b.jpg';
 import theSocialNetwork2 from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-2.jpg';
 import theSocialNetwork3 from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-3.jpg';
 import theSocialNetwork4 from '@/assets/images/blog/the-computer-the-ultimate-asshole/the-social-network-restaurant-scene-4.jpg';
@@ -194,9 +196,30 @@ In any case, as Scott McCloud's says in his book/comic <a href="https://en.wikip
 So it is up to each and every one of us, especially while enduring constant frustration, to make a conscious choice of whether we want to behave like assholes or not.
 
 <figure>
-  <Image src={theSocialNetwork1} alt="Restaurant scene from movile 'The Social Network'"/>
+  <Image src={theSocialNetwork1a} alt="Restaurant scene from movile 'The Social Network'"/>
+    <figcaption class="text-center block sm:hidden">
+        "You are probably going to be a very successful computer person".
+    </figcaption>
+</figure>
+<figure>
+  <Image src={theSocialNetwork1b} alt="Restaurant scene from movile 'The Social Network'"/>
+  <figcaption class="text-center block sm:hidden">
+    "But you're gonna go through life thinking that girls don't like you because you're a nerd.".
+</figcaption>
+</figure>
+<figure>
   <Image src={theSocialNetwork2} alt="Restaurant scene from movile 'The Social Network'"/>
+  <figcaption class="text-center block sm:hidden">
+      "And I want you to know from the bottom of my heart that that won't be true".
+</figcaption>
+</figure>
+<figure>
   <Image src={theSocialNetwork3} alt="Restaurant scene from movile 'The Social Network'"/>
+  <figcaption class="text-center block sm:hidden">
+      "It'll be because vou're an asshole".
+</figcaption>
+</figure>
+<figure>
   <Image src={theSocialNetwork4} alt="Restaurant scene from movile 'The Social Network'"/>
   <figcaption class="text-center">
     Rooney Mara playing Erica Albright with Jesse Eisenberg playing Mark Zuckerberg in<br/>the <a href="https://youtu.be/xcecQSajtwM?si=CXrOgjSGKWCYtRWw">restaurant scene from "The Social Network"</a>.
