Implement feedback for article "The Computer - the ultimate asshole?" article

--- a/src/data/blog/2026/01/12/the-computer-the-ultimate-asshole.mdx
+++ b/src/data/blog/2026/01/12/the-computer-the-ultimate-asshole.mdx
@@ -42,7 +42,7 @@ import theSocialNetwork4 from '@/assets/images/blog/the-computer-the-ultimate-as
     </figcaption>
 </figure>
 
-Software development is most often portrayed as a creative craft of building new things, but the reality is frequently a battle against bugs, invisible bytes, and machines brutally intolerant of error. Inspired by [Clive Thompson](https://www.clivethompson.net/)’s book "[Coders](https://www.goodreads.com/book/show/40406806-coders)," I reflect on the daily reality of software development in a professional context and why the way computers "behave" to us shouldn't dictate how we behave towards other fellow humans.
+Software development is most often portrayed as a creative craft of building new things. In reality? It is a frequent battle against invisible bytes, bugs, and machines brutally intolerant of the slightest error. Inspired by [Clive Thompson](https://www.clivethompson.net/)’s book "[Coders](https://www.goodreads.com/book/show/40406806-coders)," I reflect on the daily reality of a professional software developer and why the way computers "treat" us shouldn't be an excuse for us to treat our fellow humans the same way.
 
 <hr/>
 
@@ -53,7 +53,7 @@ I recently found myself reading "Chapter 3 – Constant Frustration and Bursts o
         <Image class="mb-0" src={harryAndSallyYesYesYes} alt="Restaurant scene from 'When Harry Met Sally'"/>
     </a>
   <figcaption class="text-center">
-    Meg Ryan playing Sally Albright and Billy Crystal in<br/>the <a href="https://youtu.be/6pQgbEEFPq0?si=wr50daNc_G0l8RWB">restaurant scene from 'When Harry Met Sally'</a>.
+    Meg Ryan as Sally Albright and Billy Crystal in<br/>the <a href="https://youtu.be/6pQgbEEFPq0?si=wr50daNc_G0l8RWB">restaurant scene from 'When Harry Met Sally'</a>.
   </figcaption>
 </figure>
 
@@ -103,7 +103,7 @@ Unfortunately, I could not change the library since it was used extensively in o
 
 I share this story not because it's extraordinary — quite the opposite, it's completely ordinary. Every developer has plenty of similar stories. **Tiny bugs or issues mushroom and end up eating hours or days, and above all, a ton of your mental energy.**
 
-## Software Developer's Daily Reality Bytes
+## Reality Bytes
 
 What I love about Thompson's chapter is how he captures similar stories told by well-known developers themselves and at a much larger scale than an enterprise-garden-variety CSV importer. 
 
@@ -162,16 +162,17 @@ What follows are excerpts from that chapter interspersed with songs and movie re
 > 
 > _Nearly every coder who works on big, complex software will tell you a version of this. **The dictates of working with ultraprecise machines, so brutally intolerant of error, can wind up rubbing off on the coder.**_
 
+## I’m Sorry, Dave: The Computer as a Toxic Colleague
+
 <figure>
-  <a href="https://www.youtube.com/watch?v=ARJ8cAGm6JE">
-    <Image class="mb-0" src={hal9000} alt="HAL 9000 in '2001: Space Odyssey'"/>
-  </a>
+    <a href="https://www.youtube.com/watch?v=ARJ8cAGm6JE">
+        <Image class="mb-0" src={hal9000} alt="HAL 9000 in '2001: Space Odyssey'"/>
+    </a>
     <figcaption class="text-center">
-    <a href="https://www.youtube.com/watch?v=ARJ8cAGm6JE">I'm sorry, Dave. I'm afraid I can't do that.</a> <br/> HAL 9000 to Dr. David Bowman in <a href="https://en.wikipedia.org/wiki/2001:_A_Space_Odyssey">"2001: Space Odyssey" (1968)</a>.
-  </figcaption>
+        <a href="https://www.youtube.com/watch?v=ARJ8cAGm6JE">I'm sorry, Dave. I'm afraid I can't do that.</a> <br/> HAL 9000 to Dr. David Bowman in <a href="https://en.wikipedia.org/wiki/2001:_A_Space_Odyssey">"2001: Space Odyssey" (1968)</a>.
+    </figcaption>
 </figure>
 
-## Sharing an Office with a Toxic Colleague
 > _**Why can coders be so snippy?** [Jeff Atwood](https://blog.codinghorror.com/) asks, rhetorically. He thinks it’s **because working with computers all day long is like being forced to share an office with a toxic, abusive colleague**. “If you go to work and everyone around you is an asshole, you’re going to become like that,” Atwood says. **“And the computer is the ultimate asshole. It will fail completely and spectacularly if you make the tiniest errors.** ‘I forgot a semicolon.’ Well guess what, your spaceship is a complete ball of fire because you forgot a fucking semicolon.” (He’s not speaking metaphorically here: In one of the most famous bugs in history, <a href="https://www.nasa.gov/history/60-years-ago-mariner-1-launch-attempt-to-venus/">NASA was forced to blow up its Mariner 1 spacecraft only minutes after launch</a> when it became clear that a bug was causing it to veer off course and possibly crash in a populated area. The bug itself was caused by a single incorrect character.)_
 
 <figure>
@@ -201,7 +202,7 @@ What follows are excerpts from that chapter interspersed with songs and movie re
   </figcaption>
 </figure>
 
-## The Ultimate Tool vs. The Ultimate Asshole
+## Silicon "R" NOT Us
 
 In the past couple of years, having used AI and especially LLMs more and more for my day-to-day work has helped a lot when dealing with the kind of development issues and bugs I described above. So I cannot help but wonder: will the new generation of AI-native coders develop the same kind of tolerance for frustration, or will AI smooth out the daily development work so much that they will no longer need to be so... pedantic.
 
@@ -248,7 +249,7 @@ So it is up to each and every one of us, especially while enduring constant frus
 <figure>
   <Image src={theSocialNetwork4} alt="Restaurant scene from movile 'The Social Network'"/>
   <figcaption class="text-center">
-    Rooney Mara playing Erica Albright with Jesse Eisenberg playing Mark Zuckerberg in<br/>the <a href="https://youtu.be/xcecQSajtwM?si=CXrOgjSGKWCYtRWw">restaurant scene from "The Social Network"</a>.
+    Rooney Mara as Erica Albright with Jesse Eisenberg as Mark Zuckerberg in<br/>the <a href="https://youtu.be/xcecQSajtwM?si=CXrOgjSGKWCYtRWw">restaurant scene from "The Social Network"</a>.
   </figcaption>
 </figure>
 
